docs: expand README with detailed getting started guide, tech stack table, API reference, and feature deep-dive